fix styling of specific text on the search page in dark mode

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -42,4 +42,8 @@ $warning: #fba918;
   .ais-Stats-text {
     color: #ffffffcc !important;
   }
+
+  .ais-Highlight {
+    color: #ffffffab !important;
+  }
 }
